# suii_manipulation

./: CMakeLists.txt  README.md  package.xml
config/: controllers.yaml  kinematics.yaml  ompl_planning.yaml  ur_controllers.yaml
launch/: display.launch.py  test_move.launch.py  ur3.moveit.launch.py
rviz/: display.rviz
src/: config.h  joint_state_publisher.cpp  main.cpp  manipulation (copy).cpp  manipulation.cpp  objectHandler.cpp  objectHandler.h  robotControl.cpp  robotControl.h
srdf/: ur.srdf.xacro
urdf/: suii.urdf  suii_base.urdf.xacro  suii_description.urdf.xacro  test.urdf
